--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
-APP_NAME=Laravel
+APP_NAME=ProjectSpectR
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jDuw+auaJYv7rYgTraO5QG4ELn5MB2hxWiyUkVTk/Zs=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+# SQLite Connection
+DB_CONNECTION=sqlite
+DB_DATABASE=database/maindb.sqlite
+
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
