--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
 APP_NAME=ProjectSpectR
 APP_ENV=local
-APP_KEY=base64:jDuw+auaJYv7rYgTraO5QG4ELn5MB2hxWiyUkVTk/Zs=
+APP_KEY=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
+APP_LOG=daily
+APP_LOG_LEVEL=trace
+APP_LOG_DIR=storage/logs
 APP_URL=http://localhost:8000
+APP_DEV_MODE=true
+APP_USR_IMG_LOC=/uploads
 
 # SQLite Connection
 DB_CONNECTION=sqlite
-DB_DATABASE=database/maindb.sqlite
+#DB_DATABASE=database/main.sqlite
 
 #DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
@@ -26,12 +30,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=smtp
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
