--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "messerli90/igdb": "^1.0",
         "mrplentl/form-logger-plus": "~2.2"
     },
     "require-dev": {
