--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ DB_CONNECTION=sqlite
 #DB_USERNAME=homestead
 #DB_PASSWORD=secret
 
+#IGDB
+IGDB_KEY=
+IGDB_URL=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
