Updated the Example with the other default tags

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=ProjectSpectR
+APP_NAME="Spectre Gaming"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,9 +9,12 @@ APP_URL=http://localhost:8000
 APP_DEV_MODE=true
 APP_USR_IMG_LOC=/uploads
 
+MAIL_FROM_ADDRESS=noreply@thabamboozler.com
+MAIL_FROM_NAME="Brandon Plentl"
+
 # SQLite Connection
 DB_CONNECTION=sqlite
-#DB_DATABASE=database/main.sqlite
+#DB_DATABASE=database/maindb.sqlite
 
 #DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
@@ -24,6 +27,9 @@ DB_CONNECTION=sqlite
 IGDB_KEY=
 IGDB_URL=
 
+#PSNAPI
+PSNAPI_URL=https://store.playstation.com/valkyrie-api/en/US/999/container
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -34,7 +40,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
