--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/css/ProjectSpectR.css": "/css/ProjectSpectR.css?id=a7387c90d50c10251acf"
+    "/css/SpectreGaming.css": "/css/SpectreGaming.css?id=a7387c90d50c10251acf"
 }
