Adding the base templates for the newly added Xbox API and Nintendo API

--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,19 @@ DB_CONNECTION=sqlite
 #IGDB
 IGDB_KEY=
 IGDB_URL=
+#IGDBv3
+IGDBv3_KEY=
+IGDBv3_URL=https://api-v3.igdb.com
 
 #PSNAPI
 PSNAPI_URL=https://store.playstation.com/valkyrie-api/en/US/999/container
+
+#Xbox
+XBOXAPI_URL=https://displaycatalog.mp.microsoft.com/v7.0/products
+XBOXAPI_GAMES_ARRAY_URL=https://www.xbox.com/en-US/games/xbox-one/js/xcat-bi-urls.json
+
+#Nintendo
+NINAPI_URL=https://www.nintendo.com/json/content/get/filter/game
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
