--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Spectre Gaming"
+APP_NAME="Spectre Gaming Club"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -28,17 +28,17 @@ IGDB_KEY=
 IGDB_URL=
 #IGDBv3
 IGDBv3_KEY=
-IGDBv3_URL=https://api-v3.igdb.com
+IGDBv3_URL=
 
 #PSNAPI
-PSNAPI_URL=https://store.playstation.com/valkyrie-api/en/US/999/container
+PSNAPI_URL=
 
 #Xbox
-XBOXAPI_URL=https://displaycatalog.mp.microsoft.com/v7.0/products
-XBOXAPI_GAMES_ARRAY_URL=https://www.xbox.com/en-US/games/xbox-one/js/xcat-bi-urls.json
+XBOXAPI_URL=
+XBOXAPI_GAMES_ARRAY_URL=
 
 #Nintendo
-NINAPI_URL=https://www.nintendo.com/json/content/get/filter/game
+NINAPI_URL=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -50,12 +50,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
-MAIL_HOST=
-MAIL_PORT=
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=
+MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
